--- a/source/widget/UM.card.learn/card.learn.css
+++ b/source/widget/UM.card.learn/card.learn.css
@@ -6,213 +6,176 @@ span.error {
   padding-top: 5px;
   line-height: 19px;
   font-size: 12px;
-  font-style: normal;
-  background: #fff;
   color: #e74c3c;
 }
-<<<<<<< HEAD
-.top-up {
-  width: 1050px;
-=======
 .gift-card-record {
->>>>>>> upstream/master
   margin: 20px auto;
   padding: 10px 20px;
   position: relative;
 }
-.top-up ul {
+.gift-card-record ul {
   margin: 5px 0 60px 0;
   list-style: none;
 }
-.top-up ul li {
+.gift-card-record ul li {
   float: left;
   width: 92px;
 }
-.top-up ul li a {
+.gift-card-record ul li a {
   font-size: 13px;
   color: #333;
 }
-.top-up ul .current a {
+.gift-card-record ul .current a {
   display: inline-block;
   height: 24px;
   color: #3bafda;
   font-weight: bold;
   border-bottom: 2px solid #3bafda;
 }
-.top-up .contentbind {
+.gift-card-record .contentbind {
   clear: both;
 }
-.top-up .contentbind .cl-learn .cl-content {
+.gift-card-record .contentbind .cl-learn .cl-content {
   width: 625px;
   height: 290px;
   margin: 0 auto;
 }
-.top-up .contentbind .cl-learn .cl-content .cl-content-left {
+.gift-card-record .contentbind .cl-learn .cl-content .cl-content-left {
   float: left;
   width: 300px;
   height: 185px;
 }
-.top-up .contentbind .cl-learn .cl-content .cl-content-left p {
+.gift-card-record .contentbind .cl-learn .cl-content .cl-content-left p {
   margin-bottom: 8px;
   font-family: "Microsoft YaHei";
   font-size: 14px;
   color: #e74c3c;
 }
-.top-up .contentbind .cl-learn .cl-content .cl-content-right {
+.gift-card-record .contentbind .cl-learn .cl-content .cl-content-right {
   float: right;
   width: 310px;
   height: 175px;
   margin-top: 30px;
 }
-.top-up .contentbind .cl-learn .cl-content .cl-content-right div label {
+.gift-card-record .contentbind .cl-learn .cl-content .cl-content-right div label {
   float: left;
   width: 40px;
   margin-top: 8px;
-  color: #666;
   font-weight: normal;
+  color: #666;
 }
-.top-up .contentbind .cl-learn .cl-content .cl-content-right div input {
+.gift-card-record .contentbind .cl-learn .cl-content .cl-content-right div input {
   width: 250px;
-  margin: 0;
   padding: 8px 5px;
   border: 1px solid #d2d2d2;
 }
-.top-up .contentbind .cl-learn .cl-content .cl-content-right div input:focus {
+.gift-card-record .contentbind .cl-learn .cl-content .cl-content-right div input:focus {
   border: 1px solid #3bafda;
 }
-.top-up .contentbind .cl-learn .cl-content .cl-content-right .btn-pay {
+.gift-card-record .contentbind .cl-learn .cl-content .cl-content-right .btn-pay {
   margin: 0px 30px 0 40px;
-  width: 100px;
-  height: 35px;
-  border-radius: 3px;
+  padding: 6px 35px;
   font-size: 14px;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  border-style: solid;
-  border-width: 0;
-  background-color: #3BAFDA;
-  border-color: #2392ba;
-  color: #FFFFFF;
-  transition: background-color 300ms ease-out;
 }
-.top-up .contentbind .cl-learn .cl-content .cl-content-right .btn-pay:hover {
-  background-color: #2392ba;
-}
-.top-up .contentbind .cl-learn .cl-content .cl-content-right a {
+.gift-card-record .contentbind .cl-learn .cl-content .cl-content-right a {
+  font-size: 12px;
   color: #3bafda;
 }
-.top-up .contentbind .cl-learn .prompt-box img.prompt {
+.gift-card-record .contentbind .cl-learn .prompt-box img.prompt {
   position: relative;
   width: 75px;
   height: 55px;
   top: 6px;
   left: 7px;
 }
-.top-up .contentbind .cl-learn .prompt-box .cl-prompt-box {
+.gift-card-record .contentbind .cl-learn .prompt-box .cl-prompt-box {
   background: #fff8eb;
   border-radius: 5px;
   padding: 10px 0 20px 20px;
 }
-.top-up .contentbind .cl-learn .prompt-box .cl-prompt-box h3 {
+.gift-card-record .contentbind .cl-learn .prompt-box .cl-prompt-box h3 {
   font-size: 14px;
   font-family: "Microsoft YaHei";
   color: #666;
   margin: 6px 0 6px 5px;
 }
-.top-up .contentbind .cl-learn .prompt-box .cl-prompt-box p {
+.gift-card-record .contentbind .cl-learn .prompt-box .cl-prompt-box p {
   font-size: 12px;
   margin: 0 0 0 5px;
   line-height: 24px;
 }
-.top-up .contentbind .cl-learn .prompt-box .cl-prompt-box p strong {
+.gift-card-record .contentbind .cl-learn .prompt-box .cl-prompt-box p strong {
   font-family: "Microsoft YaHei";
   font-size: 16px;
   font-weight: normal;
   color: #e74c3c;
 }
-.top-up .contentbind .cl-bank .cl-input {
+.gift-card-record .contentbind .cl-bank .cl-input {
   margin: 70px 0 150px 240px;
 }
-.top-up .contentbind .cl-bank .cl-input span {
+.gift-card-record .contentbind .cl-bank .cl-input span {
   float: left;
   font-size: 14px;
   color: #666;
 }
-.top-up .contentbind .cl-bank .cl-input input {
+.gift-card-record .contentbind .cl-bank .cl-input input {
   float: left;
   width: 130px;
-  line-height: 23px;
-  padding: 8px 5px;
-  margin: -10px 8px 12px 5px;
+  margin: -7px 8px 12px 5px;
   font-size: 20px;
   font-weight: bold;
   color: #de544c;
+  border: 1px solid #d2d2d2;
 }
-.top-up .contentbind .cl-bank .cl-input p {
+.gift-card-record .contentbind .cl-bank .cl-input input:focus {
+  border: 1px solid #3bafda;
+}
+.gift-card-record .contentbind .cl-bank .cl-input p {
   clear: both;
   height: 24px;
   margin: 0 0 0 74px;
   font-size: 12px;
   color: #999;
 }
-.top-up .contentbind .cl-bank .cl-input .cl-btn {
+.gift-card-record .contentbind .cl-bank .cl-input .cl-btn {
   margin: 25px 0 0 70px;
-  width: 100px;
-  height: 35px;
-  border-radius: 3px;
+  padding: 6px 28px;
   font-size: 14px;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  border-style: solid;
-  border-width: 0;
-  background-color: #3BAFDA;
-  border-color: #2392ba;
-  color: #FFFFFF;
-  transition: background-color 300ms ease-out;
 }
-.top-up .contentbind .cl-bank .cl-input .cl-btn:hover {
-  background-color: #2392ba;
-}
-<<<<<<< HEAD
-.top-up .contentbind .cl-bank .prompt-box {
-  width: 1010px;
-  height: 135px;
-=======
 .gift-card-record .contentbind .cl-bank .prompt-box {
->>>>>>> upstream/master
   margin: 0 auto;
   clear: both;
 }
-.top-up .contentbind .cl-bank .prompt-box img.prompt {
+.gift-card-record .contentbind .cl-bank .prompt-box img.prompt {
   position: relative;
   width: 75px;
   height: 55px;
   top: 6px;
   left: 7px;
 }
-.top-up .contentbind .cl-bank .prompt-box .cl-prompt-box {
+.gift-card-record .contentbind .cl-bank .prompt-box .cl-prompt-box {
   background: #fff8eb;
   border-radius: 5px;
   padding: 10px 0 20px 20px;
 }
-.top-up .contentbind .cl-bank .prompt-box .cl-prompt-box h3 {
+.gift-card-record .contentbind .cl-bank .prompt-box .cl-prompt-box h3 {
   font-size: 14px;
   font-family: "Microsoft YaHei";
   color: #666;
   margin: 6px 0 6px 5px;
 }
-.top-up .contentbind .cl-bank .prompt-box .cl-prompt-box p {
+.gift-card-record .contentbind .cl-bank .prompt-box .cl-prompt-box p {
   font-size: 12px;
   margin: 0 0 0 5px;
   line-height: 24px;
 }
-.top-up .contentbind .cl-bank .prompt-box .cl-prompt-box p strong {
+.gift-card-record .contentbind .cl-bank .prompt-box .cl-prompt-box p strong {
   font-family: "Microsoft YaHei";
   font-size: 16px;
   font-weight: normal;
   color: #e74c3c;
 }
-.top-up .contentbind .tu-hidden {
+.gift-card-record .contentbind .hidden {
   display: none;
 }
 .paylists {
