--- a/source/widget/Dynamic/fresh.css
+++ b/source/widget/Dynamic/fresh.css
@@ -64,6 +64,12 @@
 .fresh-list i {
   font-style: normal;
 }
+.fresh-list a {
+  outline: none;
+}
+.fresh-list a:focus {
+  outline: none;
+}
 .fresh-list .fresh-avatar {
   width: 60px;
   height: 60px;
@@ -343,6 +349,59 @@
   padding-top: 8px;
   font-size: 12px;
   color: #a0a0a0;
+  /**
+         * 删除新鲜事和评论确认弹出层Style
+         */
+  /**
+         * 删除新鲜事和评论确认弹出层Style结束
+         */
+}
+.fresh-list .fresh-detail .fresh-barinfo .fresh-dialog-delete {
+  width: 210px;
+  overflow: hidden;
+}
+.fresh-list .fresh-detail .fresh-barinfo .fresh-dialog-delete .fresh-dialog-delete-content {
+  padding: 0;
+  line-height: 32px;
+  overflow: auto;
+  text-align: center;
+  display: block;
+  overflow: hidden;
+  font-family: "SimSun";
+}
+.fresh-list .fresh-detail .fresh-barinfo .fresh-dialog-delete .fresh-dialog-delete-content .fresh-dialog-delete-tips {
+  overflow: hidden;
+  display: block;
+  text-align: center;
+  line-height: 30px;
+  margin: 0;
+  padding: 10px 0 5px 0;
+  font-size: 14px;
+  color: #333;
+}
+.fresh-list .fresh-detail .fresh-barinfo .fresh-dialog-delete .fresh-dialog-delete-content .fresh-dialog-delete-btn {
+  padding: 10px 0;
+  text-align: center;
+  overflow: hidden;
+}
+.fresh-list .fresh-detail .fresh-barinfo .fresh-dialog-delete .fresh-dialog-delete-content .fresh-dialog-delete-btn .fresh-btn {
+  margin: 0 5px;
+  padding: 8px 26px;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -ms-border-radius: 2px;
+  -o-border-radius: 2px;
+  border-radius: 2px;
+  font-size: 12px;
+  float: none;
+}
+.fresh-list .fresh-detail .fresh-barinfo .fresh-dialog-delete .fresh-dialog-delete-content .fresh-dialog-delete-btn .fresh-btn.fresh-sure-btn {
+  background: #cb0000;
+  color: #fff;
+}
+.fresh-list .fresh-detail .fresh-barinfo .fresh-dialog-delete .fresh-dialog-delete-content .fresh-dialog-delete-btn .fresh-btn.fresh-cancel-btn {
+  background: #f3f3f3;
+  color: #333333;
 }
 .fresh-list .fresh-detail .fresh-barinfo .fresh-addGold {
   float: left;
@@ -384,6 +443,7 @@
   float: left;
   color: #3bafda;
   text-decoration: none;
+  position: relative;
 }
 .fresh-list .fresh-detail .fresh-barinfo .fresh-right .fresh-right-btn a:hover {
   text-decoration: underline;
@@ -395,7 +455,6 @@
 }
 .fresh-list .fresh-detail .fresh-comment-box {
   overflow: hidden;
-  position: relative;
   padding: 10px;
   background: #fcfcfc;
   font-size: 12px;
@@ -481,9 +540,9 @@
 .fresh-list .fresh-detail .fresh-comment-box .fresh-comment-form .fresh-comment-func .fresh-comment-emote-smiles-btn {
   float: left;
   cursor: pointer;
-  height: 21px;
+  height: 33px;
   line-height: 21px;
-  margin-top: 12px;
+  padding-top: 12px;
 }
 .fresh-list .fresh-detail .fresh-comment-box .fresh-comment-form .fresh-comment-func .fresh-comment-emote-btn {
   float: left;
@@ -928,10 +987,9 @@
 .fresh-dialog-emote {
   background: #fff;
   overflow: hidden;
-  padding: 10px;
 }
 .fresh-dialog-emote .fresh-dialog-smilies-medal {
-  width: 476px;
+  width: 456px;
   overflow: hidden;
 }
 .fresh-dialog-emote .fresh-dialog-smilies-medal .fresh-smilies-title {
@@ -1037,7 +1095,7 @@
 }
 .fresh-dialog-collect .fresh-dialog-collect-content {
   min-width: 100px;
-  padding: 5px;
+  padding: 5px 0;
   line-height: 32px;
   overflow: auto;
   font-size: 12px;
@@ -1058,47 +1116,14 @@
 .fresh-dialog-collect .fresh-dialog-collect-content .fresh-dialog-success .fresh-dialog-collect-icon {
   background: url('img/fresh-check.png') no-repeat;
 }
-/**
- * 删除新鲜事和评论确认弹出层Style
- */
-.fresh-dialog-delete {
-  overflow: hidden;
+.popover-mask-box {
+  position: relative;
+  z-index: 9999999999999999;
+  float: left;
+  background: #fff;
+  opacity: 0;
+  filter: alpha(opacity=0);
 }
-.fresh-dialog-delete .fresh-dialog-delete-content {
-  min-width: 100px;
-  padding: 25px 20px;
-  line-height: 32px;
-  overflow: auto;
-  text-align: center;
-  font-family: "SimSun";
-}
-.fresh-dialog-delete .fresh-dialog-delete-content .fresh-dialog-delete-tips {
-  overflow: hidden;
-  text-align: center;
-  line-height: 30px;
-  margin: 0;
-  padding-bottom: 10px;
-  font-size: 14px;
-}
-.fresh-dialog-delete .fresh-dialog-delete-content .fresh-dialog-delete-btn {
-  padding: 10px 20px;
-  text-align: center;
-}
-.fresh-dialog-delete .fresh-dialog-delete-content .fresh-dialog-delete-btn .fresh-btn {
-  margin: 0 5px;
-  padding: 8px 26px;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
-  -ms-border-radius: 2px;
-  -o-border-radius: 2px;
-  border-radius: 2px;
-  font-size: 12px;
-}
-.fresh-dialog-delete .fresh-dialog-delete-content .fresh-dialog-delete-btn .fresh-btn.fresh-sure-btn {
-  background: #cb0000;
-  color: #fff;
-}
-.fresh-dialog-delete .fresh-dialog-delete-content .fresh-dialog-delete-btn .fresh-btn.fresh-cancel-btn {
-  background: #f3f3f3;
-  color: #333333;
+.popover {
+  max-width: 1000px;
 }
