--- a/source/widget/Dynamic/fresh.less
+++ b/source/widget/Dynamic/fresh.less
@@ -4,7 +4,6 @@
  * @author duxinli
  * @version 4.0
  */
-
 @blue-color: #3bafda;
 @font-color:#333;
 
@@ -70,6 +69,12 @@
   overflow:hidden;
   em,i{
     font-style: normal;
+  }
+  a{ 
+      outline:none;
+      &:focus{
+          outline:none;
+      }
   }
   .fresh-avatar{
      width:60px;
@@ -343,6 +348,57 @@
         padding-top:8px;
         .font-size;
         color: #a0a0a0;
+        /**
+         * 删除新鲜事和评论确认弹出层Style
+         */
+        .fresh-dialog-delete{
+            width: 210px;
+            overflow: hidden;
+            .fresh-dialog-delete-content{
+                padding:0;
+                line-height: 32px;
+                overflow: auto;
+                text-align: center;
+                display: block;
+                overflow: hidden;
+                .font-family;
+                .fresh-dialog-delete-tips {
+                     overflow: hidden;
+                     display: block;
+                     text-align: center;
+                     line-height: 30px;
+                     margin: 0;
+                     padding: 10px 0 5px 0;
+                    .font-size(14px);
+                    color: #333;
+                }
+                .fresh-dialog-delete-btn {
+                    padding: 10px 0;
+                    text-align: center;
+                    overflow: hidden;
+                    .fresh-btn{
+                       margin:0 5px;
+                       padding: 8px 26px;
+                       .border-radius(2px);
+                       .font-size(12px);
+                       float: none;
+                       &.fresh-sure-btn{
+                          background: #cb0000;
+                          color: #fff;
+                       }
+                       &.fresh-cancel-btn{
+                          background: #f3f3f3;
+                          color:@font-color 
+                       }
+                    }
+                }
+
+            }
+        }
+         /**
+         * 删除新鲜事和评论确认弹出层Style结束
+         */
+
         .fresh-addGold{
            float: left;
            background: #f9e68e;
@@ -378,6 +434,7 @@
                 float: left;
                 color:@blue-color;
                 text-decoration:none;
+                position: relative;
                 &:hover{
                   text-decoration:underline;
                 }
@@ -392,7 +449,6 @@
     } 
     .fresh-comment-box{
       overflow: hidden;
-      position: relative;
       padding:10px;
       background: #fcfcfc;
       .font-size;
@@ -475,9 +531,9 @@
              .fresh-comment-emote-smiles-btn{
                 float: left;
                 cursor: pointer;
-                height: 21px;
+                height: 33px;
                 line-height: 21px;
-                margin-top: 12px;
+                padding-top: 12px;
              }
              .fresh-comment-emote-btn{
                   float: left;
@@ -975,9 +1031,8 @@
 .fresh-dialog-emote{
    background: #fff;
    overflow: hidden;
-   padding: 10px;
    .fresh-dialog-smilies-medal{
-       width: 476px;
+       width: 456px;
        overflow: hidden;
        .fresh-smilies-title{
             overflow: hidden;
@@ -1088,7 +1143,7 @@
     overflow: hidden;
     .fresh-dialog-collect-content{
         min-width: 100px;
-        padding: 5px;
+        padding: 5px 0;
         line-height: 32px;
         overflow: auto;
         .font-size;
@@ -1112,49 +1167,17 @@
     }
 }
 
-
-/**
- * 删除新鲜事和评论确认弹出层Style
- */
-
-.fresh-dialog-delete{
-    overflow: hidden;
-    .fresh-dialog-delete-content{
-        min-width: 100px;
-        padding: 25px 20px;
-        line-height: 32px;
-        overflow: auto;
-        text-align: center;
-        .font-family;
-        .fresh-dialog-delete-tips {
-             overflow: hidden;
-             text-align: center;
-             line-height: 30px;
-             margin: 0;
-             padding-bottom: 10px;
-            .font-size(14px);
-        }
-        .fresh-dialog-delete-btn {
-            padding: 10px 20px;
-            text-align: center;
-            .fresh-btn{
-               margin:0 5px;
-               padding: 8px 26px;
-               .border-radius(2px);
-               .font-size(12px);
-               &.fresh-sure-btn{
-                  background: #cb0000;
-                  color: #fff;
-               }
-               &.fresh-cancel-btn{
-                  background: #f3f3f3;
-                  color:@font-color 
-               }
-            }
-        }
-
-    }
+.popover-mask-box{
+   position: relative;
+   z-index: 9999999999999999;
+   float: left;
+   background: #fff;
+   opacity: 0;
+   filter:alpha(opacity=0);
 }
 
+.popover{
+  max-width: 1000px;
+}
 
 
