--- a/source/widget/UserHome.courses/courseStudycenter.css
+++ b/source/widget/UserHome.courses/courseStudycenter.css
@@ -29,7 +29,7 @@ body {
 }
 .label-study {
   width: 25px;
-  height: 47px;
+  height: 60px;
   text-align: center;
   display: inline-block;
   position: absolute;
@@ -37,22 +37,36 @@ body {
   color: #fff;
   font-size: 14px;
   font-style: normal;
-  line-height: 17px;
   cursor: pointer;
-  padding-top: 8px;
+  font-weight: normal;
+  padding: 0 2px;
+  line-height: 17px;
 }
 .label-delay {
   background: #3bafda;
-  top: 57px;
+  padding-top: 12px;
+  top: 9px;
+}
+.label-delayed {
+  background: #ccd1d9;
+  top: 9px;
+  padding-top: 5px;
+  cursor: default;
 }
 .label-continun {
   background: #37bc9b;
-  top: 105px;
+  top: 71px;
+  padding-top: 12px;
+}
+.label-sheng {
+  top: 132px;
+  padding-top: 12px;
+  background: #ffaa09;
 }
 .courseList-label {
   padding-right: 25px;
 }
-.popover {
+.courselayout-list .popover {
   background-color: #f9f9f9;
   padding: 4px 3px;
   font-size: 14px;
@@ -60,11 +74,17 @@ body {
   border-color: #e5e5e5;
   box-shadow: none;
 }
-.popover.top > .arrow::after {
+.courselayout-list .popover.top > .arrow::after {
   border-top-color: #f9f9f9;
 }
-.popover.top > .arrow {
+.courselayout-list .popover.top > .arrow {
   border-top-color: #e5e5e5;
+}
+.wrap-body a,
+.wrap-body a:focus,
+.wrap-body a.btn:focus,
+.wrap-body a.btn:active {
+  outline: none;
 }
 .courseList-wrap {
   clear: both;
@@ -166,6 +186,13 @@ body {
   margin-bottom: 8px;
   font-family: 'Microsoft YaHei';
 }
+.courseList .courseList-body .course-title span {
+  color: #999;
+}
+.courseList .courseList-body .course-title .title-detail-gray {
+  color: #999;
+  cursor: default;
+}
 .courseList .courseList-body .course-title .course_estimate {
   color: #333333;
   font-size: 12px;
@@ -181,6 +208,7 @@ body {
 }
 .courseList .courseList-body .title-more {
   margin-top: 38px;
+  font-size: 14px;
 }
 .courseList .courseList-body .end-time {
   color: #666;
@@ -239,11 +267,10 @@ body {
   background: url("img/blue-arrow.png") no-repeat right center;
 }
 .courseList .courseList-body .more-service .more-list {
-  padding-top: 5px;
+  padding: 5px 0px;
   border: 1px solid #f5f5f5;
   background: #fcfcfc;
   width: 62px;
-  height: 92px;
   color: #333;
   font-size: 12px;
   line-height: 28px;
@@ -288,7 +315,6 @@ body {
   font-size: 12px;
 }
 .courseList .courseList-teacher .teacher-main .coach-con p.teacher-coach {
-  color: #3bafda;
   font-size: 14px;
   font-family: "Microsoft YaHei";
 }
@@ -345,12 +371,14 @@ body {
 .courseList .courseList-teacher .majar-items .avatar-roll a.none .icon-chevron-right {
   background: url('img/icon_chevron_right_none.png') no-repeat 0 0;
 }
-.material-exam .modal-dialog {
-  width: 750px;
+.material-exam .modal-dialog,
+.courseInformation .modal-dialog {
+  width: 770px;
   height: 380px;
 }
-.material-exam .modal-body {
-  height: 295px;
+.material-exam .modal-body,
+.courseInformation .modal-body {
+  height: 315px;
   overflow-y: auto;
   padding-bottom: 25px;
 }
@@ -358,6 +386,7 @@ body {
   border-collapse: collapse;
   border-spacing: 0;
   width: 100%;
+  border-radius: 5px;
 }
 .table thead {
   background: #fcfcfc;
@@ -416,19 +445,30 @@ table tr:nth-of-type(2n) {
   border-radius: 4px 4px 0 0;
 }
 .material-wrap .material tr td {
-  border: 1px solid #eaeaea;
   padding: 9px 17px;
+  display: inline-block;
+  width: 357px;
+  border: none;
 }
 .material-wrap .material tr td p {
   color: #666;
   font-size: 12px;
   line-height: 34px;
   margin-bottom: 10px;
+  height: 34px;
+  width: 322px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  text-align: left;
 }
 .material-wrap .material tr td span {
   color: #999999;
   font-size: 12px;
   margin-left: 10px;
+}
+.material-wrap .material tr td:first-child {
+  border-right: 1px solid #eaeaea;
 }
 .examTable {
   font-size: 12px;
@@ -456,6 +496,16 @@ table tr:nth-of-type(2n) {
   margin-right: 12px;
 }
 .load-btn-none {
+  color: #999;
+  cursor: default;
+}
+.load-btn-none:hover,
+.load-btn-none:visited {
+  color: #999;
+}
+.load-btn-none:active,
+.load-btn-none.active {
+  box-shadow: none;
   color: #999;
 }
 .bom-delay {
@@ -511,14 +561,23 @@ table tr:nth-of-type(2n) {
   font-size: 18px;
   font-family: 'Microsoft YaHei';
   line-height: 34px;
+  color: #666;
 }
 .courselayout-list .courseList-title p span {
   color: #e74c3c;
   margin-left: 10px;
   font-size: 14px;
 }
-.courselayout-list .course-table {
-  background: #fff;
+.courselayout-list .tab-record-content {
+  border-radius: 5px;
+  display: block;
+  overflow: hidden;
+}
+.courselayout-list .tab-record-content .tab-pane {
+  display: none;
+}
+.courselayout-list .tab-record-content .active {
+  display: block;
 }
 .courselayout-list .course-table td {
   display: table-cell;
@@ -528,55 +587,65 @@ table tr:nth-of-type(2n) {
   background: #fff;
   line-height: 50px;
   height: 50px;
-  border-radius: 4px;
-  border: 1px solid #eaeaea;
+  border-radius: 5px;
 }
 .courselayout-list .course-table thead tr th {
   font-size: 16px;
-  border-bottom: 1px solid #eaeaea;
+  border-bottom: none;
 }
-.courselayout-list .course-table tr {
+.courselayout-list .course-table tbody tr {
+  border-right: none;
   font-size: 14px;
   font-family: "SimSun";
+  background: #fff;
 }
-.courselayout-list .course-table tr .text-style {
+.courselayout-list .course-table tbody tr .text-style {
   text-align: center;
   font-size: 12px;
 }
-.courselayout-list .course-table tr .text-style span {
+.courselayout-list .course-table tbody tr .text-style span {
   color: #999;
 }
-.courselayout-list .course-table tr .text-style a.homework-wait-submit {
+.courselayout-list .course-table tbody tr .text-style a.homework-wait-submit {
   color: #ffbc3c;
   cursor: pointer;
 }
-.courselayout-list .course-table tr .studied-end {
+.courselayout-list .course-table tbody tr td {
+  border: none;
+}
+.courselayout-list .course-table tbody tr .studied-end {
   color: #e74c3c;
 }
-.courselayout-list .course-table tr .yellow-mark {
+.courselayout-list .course-table tbody tr .yellow-mark {
   color: #ffbc3c;
 }
-.courselayout-list .course-table tr .studied {
+.courselayout-list .course-table tbody tr .studied {
   color: #37bc9b;
 }
-.courselayout-list .course-table tr .static-gray {
+.courselayout-list .course-table tbody tr .static-gray {
   color: #999999;
 }
-.courselayout-list .course-table tr .static-red {
+.courselayout-list .course-table tbody tr .static-red {
   color: #e74c3c;
 }
-.courselayout-list .course-table tr .wait-look {
+.courselayout-list .course-table tbody tr .wait-look {
   color: #3bafda;
 }
-.courselayout-list .course-table tr td.yellow-mark em {
+.courselayout-list .course-table tbody tr td.yellow-mark em {
   display: inline-block;
   width: 18px;
   height: 18px;
   margin-left: 5px;
 }
-.courselayout-list .course-table tr td.yellow-mark .mark {
+.courselayout-list .course-table tbody tr td.yellow-mark .mark {
   background: url("img/spam.png") no-repeat right center;
   vertical-align: middle;
+}
+.courselayout-list .course-table tr:last-child {
+  border: none;
+}
+.courselayout-list .course-table tr:last-child td {
+  border: none;
 }
 .teacher-tab {
   border-bottom: 1px solid #3bafda;
@@ -593,10 +662,20 @@ table tr:nth-of-type(2n) {
   padding: 0 15px;
   cursor: pointer;
 }
+.teacher-tab li a {
+  outline: none;
+}
 .teacher-tab li.current {
   background: #3bafda;
   color: #fff;
   border-radius: 4px 4px 0 0;
+}
+.teacher-tab li.current a {
+  outline: none;
+  color: #fff;
+}
+.teacher-tab li.current a:hover {
+  color: #fff;
 }
 .amount-show .popover {
   background-color: #fcfcfc;
@@ -611,4 +690,50 @@ table tr:nth-of-type(2n) {
 .amount-show .popover li span {
   color: #e74c3c;
   margin-right: 5px;
+}
+.none-content {
+  float: left;
+  position: relative;
+  left: 50%;
+}
+.none-content .nc-center {
+  position: relative;
+  left: -50%;
+}
+.none-content .nc-center img {
+  _float: left;
+  _margin-right: 240px;
+}
+.none-content .nc-center p {
+  float: right;
+  _float: none;
+  _width: 120px;
+  margin: 30px 0 0 20px;
+  line-height: 35px;
+  font-family: "Microsoft YaHei";
+  font-size: 16px;
+}
+.none-content .nc-center p em {
+  font-style: normal;
+  color: #e74c3c;
+}
+.processingbar {
+  text-align: center;
+  margin: 3px 0 0 20px;
+  position: relative;
+  width: 100px;
+}
+.processingbar font {
+  color: #999;
+  display: block;
+  width: 100px;
+  height: 100px;
+  line-height: 100px;
+  font-size: 22px;
+  text-align: center;
+  position: absolute;
+  font-weight: bold;
+  left: 0;
+  top: 0;
+  margin: 0px 0 0 0px;
 }
