--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -601,11 +601,11 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 			background: #fff;
 			line-height: 50px;
 			height: 50px;
-			border-radius: 4px;
+			border-radius: 5px;
 			tr{
 				th{
 					font-size: 16px;
-					border-bottom: 1px solid #eaeaea;
+					border-bottom: none;
 				}
 			}
 		}
